--- a/index.html
+++ b/index.html
@@ -22,17 +22,37 @@
                 <legend>Submit a new photo or series of photos</legend>
                 <input type="file" class="btn btn-default"/>
                 <p class="help-block">Image files only (i.e. png, jpg, bmp, gif, etc.)</p>
-                <input class="btn btn-primary" type="submit" value="Submit">
+                <input class="btn btn-default" type="submit" value="Submit">
+            </form>
         </div>
 
-        <div class="container image-thumbs">  
-        </div>
+        <div class="container image-thumbs"></div>
+
+            <script id="thumbs-template" type="text/x-handlebars-template">
+
+                <div class="row">
+                    <div class="col-sm-6 col-md-4">
+                         <div class="thumbnail">
+                            <img data-src="holder.js/300x200">
+                            <div class="caption">
+                            <h3>{{title}}</h3>
+                            <p>Date: {{time}}</p>
+                            <p>Id: {{imageId}}</p> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </script>
 
         
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.0/backbone-min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.1.2/handlebars.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.0/backbone-min.js"></script>
         <script src="js/main.js"></script>
+
 
     </body>
 </html>
