adding upload view

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.0/backbone-min.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.1.0/backbone.localStorage-min.js"></script>
         <script type="text/javascript" src="js/models/image_model.js"></script>
         <script type="text/javascript" src="js/views/image_views.js"></script>
         <script type="text/javascript" src="js/views/uploader_views.js"></script>
